--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Yasser Tolba
-logo: personal_photo.jpg
 description: Network DevOps Engineer
 # show_downloads: true
+google_analytics:
 theme: jekyll-theme-midnight
